# ComfyUI-Manager

./: .gitignore  CHANGELOG.md  CLAUDE.md  DOCUMENTATION_INDEX.md  MANIFEST.in  README.md  cm-cli.py  custom-node-list.json  custom-node-list.json 3.txt  custom_nodes.json  extension-node-map.json  git_helper.py  manager_registration.json  model-list.json  monitor_test.sh  openapi.yaml  prestartup_script.py  pyproject.toml  requirements.txt  ruff.toml  scanner.py  update_ComfyUI_Spark_TTS_20250530.json
.github/workflows/: e2e.yml  (+2 more)
cm_cli/: __main__.py
comfyui_manager/: __init__.py  prestartup_script.py
docs/: PACKAGE_VERSION_MANAGEMENT.md  SECURITY_ENHANCED_INSTALLATION.md
glob/: cnr_utils.py  manager_core.py  manager_downloader.py  manager_server.py  manager_util.py
js/: README.md  comfyui-gui-builder.js  comfyui-manager.js  comfyui-share-common.js  comfyui-share-copus.js  comfyui-share-openart.js  comfyui-share-youml.js  common.js  components-manager.js  custom-nodes-manager.css  custom-nodes-manager.js  model-manager.css  model-manager.js  snapshot.js
tests/: .gitignore  .test_durations  README.md  TESTING_PROMPT.md  _install_flags_testutil.py  check_test_results.sh  pytest.ini  requirements.txt  run_automated_tests.sh  run_full_test_suite.sh  run_parallel_tests.sh  run_tests.sh  setup_parallel_test_envs.sh  setup_test_env.sh  test_csrf_content_type_helper.py  test_git_compat.py  test_install_flags_config.py  test_install_flags_guards.py  test_legacy_secgate_other_paths.py  test_nightly_cnr_fallback.py  test_unified_dep_resolver.py  update_test_durations.sh
(+96 files in other folders)
