[project]
name = "comfyui-manager"
description = "ComfyUI-Manager provides features to install and manage custom nodes for ComfyUI, as well as various functionalities to assist with ComfyUI."
version = "3.39.2"
license = { file = "LICENSE.txt" }
dependencies = [
	"GitPython",
	"PyGithub",
	"matrix-nio",
	"transformers",
	"aiofiles==24.1.0",
	"huggingface-hub==0.36.0",
	"typer",
	"rich",
	"typing-extensions",
	"toml",
	"uv",
	"chardet",
]

[project.urls]
Repository = "https://github.com/ltdrdata/ComfyUI-Manager"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "drltdata"
DisplayName = "ComfyUI-Manager"
Icon = ""
